--- a/ggplotly.qmd
+++ b/ggplotly.qmd
@@ -46,8 +46,9 @@ p <- ggplot(dat, aes(x=xvar, y=yvar)) +
 ggplotly(p)
 ```
 
+# geom_density {orientation="columns"}
 
-# geom_density
+## Column
 
 ```{r}
 #| title: Density and Scatterplot Overlay Using geom_density
@@ -62,6 +63,32 @@ p <- ggplot(df, aes(x, y)) +
 ggplotly(p)
 ```
 
+## Column
+
+```{r}
+#| title: Add Conditional Density Curves to Plot
+dim1 <- c(rnorm(100, mean=1), rnorm(100, mean=4))
+dim2 <- rnorm(200, mean=1)
+cat <- factor(c(rep("a", 100), rep("b", 100)))
+mydf <- data.frame(cbind(dim2, dim1, cat))
+p <- ggplot(data=mydf, aes(x=dim1, y=dim2, colour=as.factor(cat))) +
+  geom_point() +
+  stat_density(aes(x=dim1, y=(-2+(..scaled..))),
+               position="identity", geom="line")
+
+# extract the x range to make the new densities align with y-axis
+xrange <- ggplot_build(p)$layout$panel_scales_x[[1]]$range$range
+
+## Get densities of dim2
+ds <- do.call(rbind, lapply(unique(mydf$cat), function(lev) {
+    dens <- with(mydf, density(dim2[cat==lev]))
+    data.frame(x=dens$y+xrange[1], y=dens$x, cat=lev)
+}))
+
+p <- p + geom_path(data=ds, aes(x=x, y=y, color=factor(cat)))
+
+ggplotly(p)
+```
 
 ```{r}
 #| title: Add Conditional Density Curves to Plot
