--- a/ggplotly.qmd
+++ b/ggplotly.qmd
@@ -48,7 +48,7 @@ ggplotly(p)
 
 # geom_density {orientation="columns"}
 
-## Column
+## Column (width="60%")
 
 ```{r}
 #| title: Density and Scatterplot Overlay Using geom_density
@@ -65,28 +65,17 @@ ggplotly(p)
 
 ## Column
 
+
 ```{r}
-#| title: Add Conditional Density Curves to Plot
-dim1 <- c(rnorm(100, mean=1), rnorm(100, mean=4))
-dim2 <- rnorm(200, mean=1)
-cat <- factor(c(rep("a", 100), rep("b", 100)))
-mydf <- data.frame(cbind(dim2, dim1, cat))
-p <- ggplot(data=mydf, aes(x=dim1, y=dim2, colour=as.factor(cat))) +
-  geom_point() +
-  stat_density(aes(x=dim1, y=(-2+(..scaled..))),
-               position="identity", geom="line")
+#| title: stat_density Example
+dfGamma = data.frame(nu75 = rgamma(100, 0.75),
+           nu1 = rgamma(100, 1),
+           nu2 = rgamma(100, 2))
 
-# extract the x range to make the new densities align with y-axis
-xrange <- ggplot_build(p)$layout$panel_scales_x[[1]]$range$range
+dfGamma = stack(dfGamma)
 
-## Get densities of dim2
-ds <- do.call(rbind, lapply(unique(mydf$cat), function(lev) {
-    dens <- with(mydf, density(dim2[cat==lev]))
-    data.frame(x=dens$y+xrange[1], y=dens$x, cat=lev)
-}))
-
-p <- p + geom_path(data=ds, aes(x=x, y=y, color=factor(cat)))
-
+p <- ggplot(dfGamma, aes(x = values)) +
+            stat_density(aes(group = ind, color = ind),position="identity",geom="line")
 ggplotly(p)
 ```
 
@@ -115,3 +104,28 @@ p <- p + geom_path(data=ds, aes(x=x, y=y, color=factor(cat)))
 ggplotly(p)
 ```
 
+
+```{r}
+#| title: geom_density and facet_wrap Together
+dd<-data.frame(matrix(rnorm(144, mean=2, sd=2),72,2),c(rep("A",24),rep("B",24),rep("C",24)))
+colnames(dd) <- c("x_value", "Predicted_value",  "State_CD")
+
+dd <- data.frame(
+  predicted = rnorm(72, mean = 2, sd = 2),
+  state = rep(c("A", "B", "C"), each = 24)
+)
+
+grid <- with(dd, seq(min(predicted), max(predicted), length = 100))
+normaldens <- ddply(dd, "state", function(df) {
+  data.frame(
+    predicted = grid,
+    density = dnorm(grid, mean(df$predicted), sd(df$predicted))
+  )
+})
+
+p <- ggplot(dd, aes(predicted))  +
+            geom_density() +
+            geom_line(aes(y = density), data = normaldens, colour = "red") +
+            facet_wrap(~ state)
+ggplotly(p)
+```
